pqrs/IaC/frontend/co_pqrs_front_test/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: co-pqrs-front-test
  labels:
    app.kubernetes.io/part-of: frontend
spec:
  selector:
    app: co-pqrs-front-test
  ports:
    - name: http
      port: 8501
      targetPort: 8501
  type: ClusterIP
